# todoapi

./: .gitignore  Makefile  README.rst  pyproject.toml
tests/: test_todoapi.py
todoapi/: config.py  db.py  main.py  models.py
